删除权限完成

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,5 +1,9 @@
-html,body{
+html,body,#app{
     height:100%;
     margin:0;
     padding:0;
+    min-width: 660px;
 }
+.el-breadcrumb{
+    margin-bottom:10px;
+  }
