本项目的难点：商品添加的级联选择器的渲染及请求前的数据准备。

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -7,3 +7,8 @@ html,body,#app{
 .el-breadcrumb{
     margin-bottom:10px;
   }
+
+ .el-scrollbar__wrap{
+    max-height:200px;
+    overflow: scroll;    
+  }
