商品参数页的级联选择框渲染完成

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -3,6 +3,8 @@ html,body,#app{
     margin:0;
     padding:0;
     min-width: 660px;
+    color:#606266;
+  font-size: 14px;
 }
 .el-breadcrumb{
     margin-bottom:10px;
@@ -12,3 +14,4 @@ html,body,#app{
     max-height:200px;
     overflow: scroll;    
   }
+  
